@@ -182,6 +182,7 @@ public class RobotRulesParser implements Configurable {
       while (pos < end) {
         if (path.startsWith(entries[pos].prefix))
           return entries[pos].allowed;
+
         pos++;
       }
 
@@ -335,6 +336,12 @@ public class RobotRulesParser implements Configurable {
         doneAgents= true;
         String path= line.substring(line.indexOf(":") + 1);
         path= path.trim();
+        
+        // Skip if no path was specified
+        if (path.length() == 0) {
+          // Go to the next token
+          continue;
+        }
         try {
           path= URLDecoder.decode(path, CHARACTER_ENCODING);
         } catch (Exception e) {
@@ -560,7 +567,7 @@ public class RobotRulesParser implements Configurable {
 
       String testPath= testsIn.readLine().trim();
       while (testPath != null) {
-        System.out.println( (rules.isAllowed(testPath) ? 
+        System.out.println( (rules.isAllowed(new URL(testPath)) ? 
                              "allowed" : "not allowed")
                             + ":\t" + testPath);
         testPath= testsIn.readLine();
