@@ -2,6 +2,8 @@ Nutch Change Log
 
 (trunk) Current Development:
 
+* NUTCH-1408 RobotRulesParser main doesn't take URL's (markus)
+
 * NUTCH-1400 Remove developer -core option for bin/nutch (jnioche)
 
 * NUTCH-1404 Nutch script fails to find job file in deploy mode (sidabatra, jnioche)
